# sick_safetyscanners_base

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  sick_safetyscannersConfig.cmake  sick_safetyscanners_baseConfig.cmake  sicksafetyscannersConfig.cmake
docs/: SickSafetyscannersBaseConfigurationConfig-usage.dox
examples/: test_async.cpp
include/sick_safetyscanners/: SickSafetyscanners.h
include/sick_safetyscanners/cola2/: Command.h
include/sick_safetyscanners/communication/: AsyncTCPClient.h
include/sick_safetyscanners/logging/: logging_wrapper.h
include/sick_safetyscanners_base/: Exceptions.h  Generics.h  Logging.h  SickSafetyscanners.h  SickSafetyscannersBase.h  Types.h  constants.h  exceptions.h  generics.h  log.h  logging.h  types.h
include/sick_safetyscanners_base/cola2/: ApplicationNameVariableCommand.h  ChangeCommSettingsCommand.h  CloseSession.h  Cola2.h  Cola2Session.h  Cola2Session_.h  Command.h  ConfigMetadataVariableCommand.h  CreateSession.h  DeviceNameVariableCommand.h  DeviceStatusVariableCommand.h  FieldGeometryVariableCommand.h  FieldHeaderVariableCommand.h  FieldSetsVariableCommand.h  FindMeCommand.h  FirmwareVersionVariableCommand.h  LatestTelegramVariableCommand.h  MeasurementCurrentConfigVariableCommand.h  MeasurementPersistentConfigVariableCommand.h  MethodCommand.h  MonitoringCaseTableHeaderVariableCommand.h  MonitoringCaseVariableCommand.h  OrderNumberVariableCommand.h  ProjectNameVariableCommand.h  RequiredUserActionVariableCommand.h  SerialNumberVariableCommand.h  StatusOverviewVariableCommand.h  TypeCodeVariableCommand.h  UserNameVariableCommand.h  VariableCommand.h  commands.h
include/sick_safetyscanners_base/communication/: AsyncTCPClient.h  AsyncUDPClient.h  SyncTCPClient.h  TCPClient.h  UDPClient.h
include/sick_safetyscanners_base/data_processing/: ParseApplicationData.h  ParseApplicationNameData.h  ParseConfigMetadata.h  ParseData.h  ParseDataHeader.h  ParseDatagramHeader.h  ParseDerivedValues.h  ParseDeviceName.h  ParseDeviceStatus.h  ParseFieldGeometryData.h  ParseFieldHeaderData.h  ParseFieldSetsData.h  ParseFirmwareVersion.h  ParseGeneralSystemState.h  ParseIntrusionData.h  ParseMeasurementCurrentConfigData.h  ParseMeasurementData.h  ParseMeasurementPersistentConfigData.h  ParseMonitoringCaseData.h  ParseOrderNumber.h  ParseProjectName.h  ParseRequiredUserAction.h  ParseSerialNumber.h  ParseStatusOverview.h  ParseTCPPacket.h  ParseTypeCodeData.h  ParseUserNameData.h  ReadWriteHelper.hpp  TCPPacketMerger.h  UDPPacketMerger.h
include/sick_safetyscanners_base/datastructure/: ApplicationData.h  ApplicationInputs.h  ApplicationName.h  ApplicationOutputs.h  CommSettings.h  ConfigData.h  ConfigMetadata.h  Data.h  DataHeader.h  DatagramHeader.h  Datastructure.h  DerivedValues.h  DeviceName.h  DeviceStatus.h  FieldData.h  FieldSets.h  FirmwareVersion.h  GeneralSystemState.h  IntrusionData.h  IntrusionDatum.h  LatestTelegram.h  MeasurementData.h  MonitoringCaseData.h  OrderNumber.h  PacketBuffer.h  ParsedPacketBuffer.h  ProjectName.h  RequiredUserAction.h  ScanPoint.h  SerialNumber.h  StatusOverview.h  TypeCode.h  UserName.h
include/sick_safetyscanners_base/experimental/: enumflags.h  flagset.h  types.h
include/sick_safetyscanners_base/logging/: logging_wrapper.h
src/: SickSafetyscanners.cpp  SickSafetyscannersBase.cpp
src/cola2/: ApplicationNameVariableCommand.cpp  ChangeCommSettingsCommand.cpp  CloseSession.cpp  Cola2Session.cpp  Command.cpp  ConfigMetadataVariableCommand.cpp  CreateSession.cpp  DeviceNameVariableCommand.cpp  DeviceStatusVariableCommand.cpp  FieldGeometryVariableCommand.cpp  FieldHeaderVariableCommand.cpp  FieldSetsVariableCommand.cpp  FindMeCommand.cpp  FirmwareVersionVariableCommand.cpp  LatestTelegramVariableCommand.cpp  MeasurementCurrentConfigVariableCommand.cpp  MeasurementPersistentConfigVariableCommand.cpp  MethodCommand.cpp  MonitoringCaseTableHeaderVariableCommand.cpp  MonitoringCaseVariableCommand.cpp  OrderNumberVariableCommand.cpp  ProjectNameVariableCommand.cpp  RequiredUserActionVariableCommand.cpp  SerialNumberVariableCommand.cpp  StatusOverviewVariableCommand.cpp  TypeCodeVariableCommand.cpp  UserNameVariableCommand.cpp  VariableCommand.cpp
src/communication/: AsyncTCPClient.cpp  AsyncUDPClient.cpp  SyncTCPClient.cpp  TCPClient.cpp  UDPClient.cpp
src/data_processing/: ParseApplicationData.cpp  ParseApplicationNameData.cpp  ParseConfigMetadata.cpp  ParseData.cpp  ParseDataHeader.cpp  ParseDatagramHeader.cpp  ParseDerivedValues.cpp  ParseDeviceName.cpp  ParseDeviceStatus.cpp  ParseFieldGeometryData.cpp  ParseFieldHeaderData.cpp  ParseFieldSetsData.cpp  ParseFirmwareVersion.cpp  ParseGeneralSystemState.cpp  ParseIntrusionData.cpp  ParseMeasurementCurrentConfigData.cpp  ParseMeasurementData.cpp  ParseMeasurementPersistentConfigData.cpp  ParseMonitoringCaseData.cpp  ParseOrderNumber.cpp  ParseProjectName.cpp  ParseRequiredUserAction.cpp  ParseSerialNumber.cpp  ParseStatusOverview.cpp  ParseTCPPacket.cpp  ParseTypeCodeData.cpp  ParseUserNameData.cpp  TCPPacketMerger.cpp  UDPPacketMerger.cpp
src/datastructure/: ApplicationData.cpp  ApplicationInputs.cpp  ApplicationName.cpp  ApplicationOutputs.cpp  CommSettings.cpp  ConfigData.cpp  ConfigMetadata.cpp  Data.cpp  DataHeader.cpp  DatagramHeader.cpp  DerivedValues.cpp  DeviceName.cpp  DeviceStatus.cpp  FieldData.cpp  FieldSets.cpp  FirmwareVersion.cpp  GeneralSystemState.cpp  IntrusionData.cpp  IntrusionDatum.cpp  LatestTelegram.cpp  MeasurementData.cpp  MonitoringCaseData.cpp  OrderNumber.cpp  PacketBuffer.cpp  ParsedPacketBuffer.cpp  ProjectName.cpp  RequiredUserAction.cpp  ScanPoint.cpp  SerialNumber.cpp  StatusOverview.cpp  TypeCode.cpp  UserName.cpp
