<?xml version="1.0"?>
<package format="2">
  <name>sick_safetyscanners_base</name>
  <version>1.0.3</version>
  <description>Provides an Interface to read the sensor output of a SICK
  Safety Scanner</description>

  <maintainer email="puck@fzi.de">Lennart Puck</maintainer>

  <author>Lennart Puck</author>

  <license>ALv2</license>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  <build_type>cmake</build_type>

  </export>
</package>
